subido nuestra foto a diploma

--- a/diplomas.html
+++ b/diplomas.html
@@ -2,7 +2,7 @@
 <head>
 <title>Pagina de mi propiedad</title>
 </head>
-<center><img src="mi foto.jpg" width="250" height="250px"><br></center>
+<center><img src="nuestra foto.jpg" width="250" height="250px"><br></center>
 <body bgcolor="red" >
 <hr color = "blue">
 <center>
